--- a/src/Buseta/TemplateBundle/Resources/views/Macros/macros.html.twig
+++ b/src/Buseta/TemplateBundle/Resources/views/Macros/macros.html.twig
@@ -7,7 +7,7 @@
     {% elseif state == 'PROCESS' or state == 'PR' or state == 'AP' %}
         {% set badge = 'primary' %}
     {% elseif state == 'POSTED' or state == 'LS' or state == 'PA'
-     or state == 'PENAL' %}
+     or state == 'PENAL' or  state == 'TRANSITO'%}
         {% set badge = 'warning' %}
     {% else %}
         {% set badge = 'danger' %}
